[project]
name = "acc-rpi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cantools>=40.0",
    "numpy>=2.4.4",
    "opencv-contrib-python>=4.13.0.92",
    "pillow>=12.2.0",
    "python-can>=4.4.0",
    "rplidar-roboticia>=0.9.5",
]
